# netease-album-wallpaper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/netease_album_wallpaper/: __init__.py  cli.py  color.py  layout.py  netease.py  pipeline.py  render.py
tests/: test_color_and_layout.py  test_netease.py  test_render.py
